<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="#282828" >

            <ImageView
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:src="@drawable/logo" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/tx01" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/tx_bg" />
        </RelativeLayout>

        <HorizontalScrollView
            android:id="@+id/hsv"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:scrollbars="none" >

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <cn.edu.lyu.ldradiostation.views.NavigationView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/tuijian"
                    android:textColor="#575656"
                    android:textSize="18dp" />

                <cn.edu.lyu.ldradiostation.views.NavigationView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/fenlei"
                    android:textColor="#575656"
                    android:textSize="18dp" />

                <cn.edu.lyu.ldradiostation.views.NavigationView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/jiemudan"
                    android:textColor="#575656"
                    android:textSize="18dp" />

                <cn.edu.lyu.ldradiostation.views.NavigationView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/meiwen"
                    android:textColor="#575656"
                    android:textSize="18dp" />

                <cn.edu.lyu.ldradiostation.views.NavigationView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/xinwen"
                    android:textColor="#575656"
                    android:textSize="18dp" />

                <cn.edu.lyu.ldradiostation.views.NavigationView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/fenxiang"
                    android:textColor="#575656"
                    android:textSize="18dp" />
            </LinearLayout>
        </HorizontalScrollView>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom" >

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:src="@drawable/tx01"
                android:visibility="gone" />

            <ImageView
                android:layout_width="140dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:src="@drawable/tx_bg2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1" >

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/search" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@drawable/play_pre" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@drawable/play_pre" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@drawable/play_pre" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@drawable/play_pre" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>